<resources>
    <string name="app_name">MySecurityFirst</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ramagouda Khot</string>
    <string name="nav_header_subtitle">ramagoudakhot@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_qr_scaner">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_about_us">Adout Us</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <!--Login-->
    <string name="login_dummy">Sign in</string>
    <string name="login">Sign in</string>
    <string name="email">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="line_text">--------------- or ---------------</string>
    <string name="google_text">Google</string>
    <string name="facebook_text">Facebook</string>
    <string name="register_text">Don\'t have an account? Sign up here</string>
    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>
    <string name="lable_mainActivity">Dashboard</string>
</resources>
